# Comfyui-Tiktok-Caption

./: .gitignore  MEMD.md  README.md  __init__.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish-node.yml
py/: _render_child.py  headless_render.py  takumi_caption_node.py  templates.py
scripts/: build-css.mjs  build.mjs  gen-manifest.mjs
src/: caption_render.ts  font_catalog.ts  font_loader.ts  param_panel.ts  sidebar_mount.tsx  takumi_caption.ts  test_caption.ts  tiktok_caption.ts  tscaps_bridge.ts
src/sidebar/services/: TemplatePreviewArtifactsBuilder.ts  TemplatePreviewMock.ts
src/sidebar/template/: TemplateCard.tsx  TemplateSelector.tsx
web/css/: tscaps-ui.css
web/js/: README.md  package.json  takumi_caption.js  takumi_wasm.js  tiktok_caption.js
web/templates/: AUTHORING.md  LICENSE  README.md  manifest.json
web/templates/anya/: style.css  template.json
web/templates/cleo/: style.css  template.json
web/templates/elio/: style.css  template.json
web/templates/freya/: style.css  template.json
web/templates/iris/: style.css  template.json
web/templates/ivo/: style.css  template.json
web/templates/juno/: style.css  template.json
web/templates/kai/: style.css  template.json
web/templates/kel/: style.css  template.json
web/templates/lena/: style.css  template.json
web/templates/levi/: style.css  template.json
web/templates/loki/: style.css  template.json
web/templates/luca/: style.css  template.json
web/wasm/: takumi_wasm.d.ts
(+36 files in other folders)
