[project]
name = "comfyui-tiktok-caption"
description = "TikTok Caption — ComfyUI custom node that renders CSS-styled captions/subtitles from SRT or plain text using the tscaps engine, with a 1:1 in-node live preview."
version = "1.0.1"
license = "MIT"
authors = [
    { name = "Caption Live Team" }
]
keywords = ["caption", "subtitle", "video", "comfyui", "tscaps"]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pillow",
    "cloakbrowser",
]

[project.urls]
Repository = "https://github.com/obvirm/Comfyui-Tiktok-Caption"

[tool.comfy]
# Comfy Registry publisher id (must match your registered publisher account).
PublisherId = "obvirm"
DisplayName = "Comfyui-Tiktok-Caption"
Icon = ""
includes = [
    "__init__.py",
    "py",
    "src",
    "web",
    "vendor",
    "package.json",
    "package-lock.json",
    "tsconfig.json",
    "vite.config.ts",
    "README.md",
    "pyproject.toml",
]
# requires-comfyui = ">=1.0.0"
